--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
   "itemListElement": [{
     "@type": "ListItem",
     "position": 1,
-    "name": "Купить",
+    "name": "buy",
     "item": "https://CFG Toolbox-project.ru/buy"
   },{
     "@type": "ListItem",
     "position": 2,
-    "name": "Бесплатный чит",
+    "name": "Free cheat",
     "item": "https://CFG Toolbox-project.ru/free"
   }]
 }
