--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <html lang="ru">
 <head>
   <link rel="shortcut icon" href="./icon_f.ico" />
-  <title>Free cheat for CS:GO,RUST,GTA ONLINE » CFG Toolbox-PROJECT.RU</title>
+  <title>Free cheat for FORTNITE,GTA V » CFG Toolbox-PROJECT.RU</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<meta content="CFG Toolbox Project - Private cheat for CS:GO,RUST,GTA ONLINE" name="og:title">
-<meta content="CFG Toolbox Project - Private cheat for CS:GO,RUST,GTA ONLINE" name="vk:title">
-<meta content="CFG Toolbox Project - Private cheat for CS:GO,RUST,GTA ONLINE" itemprop="name">
-<meta content="CFG Toolbox Project - Private cheat for CS:GO,RUST,GTA ONLINE" name="twitter:title">
-<meta content="cs download cheat, cs go skin, skin changer, cheat cs, cheat go, cheat cs go, cheats for cs, cheats for csgo, cheats for cs go, wx cs go, banihop in cs, aim in cs, legit, legit cheats , legit cfg, download legit, rage for cs, iskan, xone, cheats xone, xone cheat cs, xone download, xone cheat crack, system bot, xone crack, cs go, cs go, csgo, csgo, cs: go, RUST , GTA ONLINE, CFG Toolbox, CFG Toolbox project, aurora, aurora cheat, new cheat, best cheat, Cheat for CS GO, cheats cs go, cheat for cs go, Cheat for cs go, cheats for cs go, cheats, cheat cs go, cheat, CFG Toolbox cheat, cheats for cs go, private cheat, cheat for CS: GO, cheat aurora, freeqn, spirthack, xone, cheat CS: GO, RUST, GTA ONLINE, freeqnnet, CS: GO, RUST, GTA ONLINE , multihack, cheat, skins, wh, aimbot, inventory, danger zone, restricted area, cheats for csgo, haunted, CFG Toolbox crack" name="keywords">
-<meta content="CFG Toolbox - Best of its kind cheat for CS: GO, RUST, GTA ONLINE. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of CS: GO, RUST, GTA ONLINE right now!" name="description" property="description">
-<meta content="CFG Toolbox - Best of its kind cheat for CS: GO, RUST, GTA ONLINE. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of CS: GO, RUST, GTA ONLINE right now!" name="og:description" property="og:description">
-<meta content="CFG Toolbox - Best of its kind cheat for CS: GO, RUST, GTA ONLINE. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of CS: GO, RUST, GTA ONLINE right now!" itemprop="description">
-<meta content="CFG Toolbox - Best of its kind cheat for CS: GO, RUST, GTA ONLINE. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of CS: GO, RUST, GTA ONLINE right now!" name="vk:description" property="vk:description">
-<meta content="CFG Toolbox - Best of its kind cheat for CS: GO, RUST, GTA ONLINE. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of CS: GO, RUST, GTA ONLINE right now!" name="twitter:description" property="twitter:description">
+<meta content="CFG Toolbox Project - Private cheat for FORTNITE,GTA V" name="og:title">
+<meta content="CFG Toolbox Project - Private cheat for FORTNITE,GTA V" name="vk:title">
+<meta content="CFG Toolbox Project - Private cheat for FORTNITE,GTA V" itemprop="name">
+<meta content="CFG Toolbox Project - Private cheat for FORTNITE,GTA V" name="twitter:title">
+<meta content="cs download cheat, cs go skin, skin changer, cheat cs, cheat go, cheat cs go, cheats for cs, cheats for csgo, cheats for cs go, wx cs go, banihop in cs, aim in cs, legit, legit cheats , legit cfg, download legit, rage for cs, iskan, xone, cheats xone, xone cheat cs, xone download, xone cheat crack, system bot, xone crack, cs go, cs go, csgo, csgo, FORTNITE , GTA V, CFG Toolbox, CFG Toolbox project, aurora, aurora cheat, new cheat, best cheat, Cheat for CS GO, cheats cs go, cheat for cs go, Cheat for cs go, cheats for cs go, cheats, cheat cs go, cheat, CFG Toolbox cheat, cheats for cs go, private cheat, cheat for CS: GO, cheat aurora, freeqn, spirthack, xone, cheat FORTNITE, GTA V, freeqnnet, FORTNITE, GTA V , multihack, cheat, skins, wh, aimbot, inventory, danger zone, restricted area, cheats for csgo, haunted, CFG Toolbox crack" name="keywords">
+<meta content="CFG Toolbox - Best of its kind cheat for FORTNITE, GTA V. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of FORTNITE, GTA V right now!" name="description" property="description">
+<meta content="CFG Toolbox - Best of its kind cheat for FORTNITE, GTA V. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of FORTNITE, GTA V right now!" name="og:description" property="og:description">
+<meta content="CFG Toolbox - Best of its kind cheat for FORTNITE, GTA V. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of FORTNITE, GTA V right now!" itemprop="description">
+<meta content="CFG Toolbox - Best of its kind cheat for FORTNITE, GTA V. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of FORTNITE, GTA V right now!" name="vk:description" property="vk:description">
+<meta content="CFG Toolbox - Best of its kind cheat for FORTNITE, GTA V. Unique and modern interface with a choice of language and menu theme. A large number of necessary functions and interesting additions: wallhack with a complete bypass of recording on video and streams, smooth legit aimbot, hard rage aimbot, a unique inventory changer with cases, medals and any skins in the inventory, a profile changer with the ability to put any rank, legitimate anti- Aims and functions for the lobby! Cheat will give you a complete advantage over your opponents and will definitely not leave you indifferent! Become a god of FORTNITE, GTA V right now!" name="twitter:description" property="twitter:description">
 
 <meta data-n-head="true" data-hid="og-image" name="og:image" content="/main/templates/img/preview.png">
 <meta property="og:image" content="/main/templates/img/preview.webp">
@@ -32,7 +32,7 @@
 <script type="application/ld+json">
 {
   "@context": "https://CFG Toolbox-project.ru",
-  "@type": "CFG Toolbox Project - Private cheat for CS:GO,RUST,GTA ONLINE",
+  "@type": "CFG Toolbox Project - Private cheat for FORTNITE,GTA V",
   "itemListElement": [{
     "@type": "ListItem",
     "position": 1,
@@ -82,7 +82,7 @@
             <nav class="navbar navbar-expand-md bg-transparent w-100">
                 <a class="navbar-brand lt-110" href="/">
                     <span class="font-bold">CFG Toolbox</span>
-                    <span class="font-bold">Private cheat for CS:GO,RUST,GTA ONLINE</span>
+                    <span class="font-bold">Private cheat for FORTNITE,GTA V</span>
                 </a>
                 
                 <div id="dd" class="wrapper-dropdown" tabindex="1">
@@ -127,16 +127,16 @@
               <circle cx="31.5" cy="17.5" r="17.5" fill="#0060FE"/>
             </svg>
             <div class="title-index-mini font-medium">FREE</div>
-            <h1 class="font-bold"><i>Win in CS:GO,RUST,GTA ONLINE</i><br>right now!</h1>
+            <h1 class="font-bold"><i>Win in FORTNITE,GTA V</i><br>right now!</h1>
             <div class="title-index-text font-medium">Best free cheat for beginners with easy interface</div>
             <div class="title-index-windows font-medium"><i class="fab fa-windows"></i>Working on all versions of Windows</div>
             <div class="title-index-button-block d-flex flex-wrap">
-              <a href="https://oxy.st/d/BIfe" target="_blank" class="title-index-button sp_notify_prompt active" onclick="alert('Password from zip: 1234\nGo to Oxycloud, Press the download button, then unpack zip with cheat, using password.Run game, THEN open already.exe.\nPress Insert in game to activate cheat. \n (PS:if link wont open, turn off option block pop-ups)')"><i class="fas fa-file-download"></i>Download cheat</a>
+              <a href="https://oxy.st/d/BIfe" target="_blank" class="title-index-button sp_notify_prompt active" onclick="alert('Password from zip: 1234\nGo to Oxycloud, Press the download button, then unpack zip with cheat, using password.Run game, THEN open already.exe.\nPress Insert in game to activate cheat. \n (PS:if link wont open, turn off option block pop-ups)')"><i class="fas fa-file-download"></i>Download(Fortnite)</a>
               <a class="title-index-button">Config(In development!)</a>
               
             </div>
             <div class="title-index-button-block d-flex flex-wrap">
-              <a target="_blank" class="title-index-button sp_notify_prompt active" style="width: 100%;margin: 15px 30px 0px 0px;">New update! Try new version!</a>
+              <a href="https://oxy.st/d/BIfe" target="_blank" class="title-index-button sp_notify_prompt active" style="width: 100%;margin: 15px 30px 0px 0px;">Download(GTA V)!</a>
             </div>
           </div>
       </div>
@@ -210,7 +210,7 @@
               <div class="col col-12 col-md-6">
                 <div class="background-footer-1">
                   <span class="d-block font-bold">CFG Toolbox</span>
-                  <span class="d-block font-medium">Private cheat for CS:GO,RUST,GTA ONLINE,RUST,GTA ONLINE</span>
+                  <span class="d-block font-medium">Private cheat for FORTNITE,GTA V</span>
                   <span class="d-block font-medium">© 2020-2021</span>
                 </div>
               </div>
