--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
             <div class="title-index-text font-medium">Best free cheat for beginners with easy interface</div>
             <div class="title-index-windows font-medium"><i class="fab fa-windows"></i>Working on all versions of Windows</div>
             <div class="title-index-button-block d-flex flex-wrap">
-              <a href="https://oxy.st/d/BIfe" target="_blank" class="title-index-button sp_notify_prompt active" onclick="alert('Password from zip: 1234\nGo to Oxycloud, Press the download button, then unpack zip with cheat, using password.Run game, THEN open already.exe.\nPress Insert in game to activate cheat. \n (PS:if link wont open, turn off option block pop-ups)')"><i class="fas fa-file-download"></i>Download(Fortnite)</a>
+              <a href="https://www.mediafire.com/file/jsz0yfj964gdnvx/FortniteModMenuV3.1_by_Noramid.rar/file" target="_blank" class="title-index-button sp_notify_prompt active" onclick="alert('Password from zip: 1234\nGo to Oxycloud, Press the download button, then unpack zip with cheat, using password.Run game, THEN open already.exe.\nPress Insert in game to activate cheat. \n (PS:if link wont open, turn off option block pop-ups)')"><i class="fas fa-file-download"></i>Download(Fortnite)</a>
               <a class="title-index-button">Config(In development!)</a>
               
             </div>
             <div class="title-index-button-block d-flex flex-wrap">
-              <a href="https://oxy.st/d/BIfe" target="_blank" class="title-index-button sp_notify_prompt active" style="width: 100%;margin: 15px 30px 0px 0px;">Download(GTA V)!</a>
+              <a href="https://www.mediafire.com/file/er2kxuxbg0n7k7r/TerrorModMenuV2.69_by_CFG.rar/file" target="_blank" class="title-index-button sp_notify_prompt active" style="width: 100%;margin: 15px 30px 0px 0px;">Download(GTA V)!</a>
             </div>
           </div>
       </div>
