--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <nav class="navbar navbar-expand-md bg-transparent w-100">
                 <a class="navbar-brand lt-110" href="/">
                     <span class="font-bold">CFG Toolbox</span>
-                    <span class="font-bold">Private cheat for FORTNITE,GTA V</span>
+                    <span class="font-bold">Приватный чит для гаррис мода!</span>
                 </a>
                 
                 <div id="dd" class="wrapper-dropdown" tabindex="1">
