--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
             <div class="col col-12 col-md-4">
               <div class="plus-title">
                 <div class="plus-images"><img src="pluss.svg"></div>
-                Benefits
+                Достоинства
               </div>
             </div>
             <div class="col col-12 col-md-3">
               <div class="plus-love">
                 <div class="plus-images-2"><img src="love.svg"></div>
-                Best at our case!
+                Лучшие в своём роде!
               </div>
             </div>
             <div class="col col-12 col-md-5">
